[package]
name = "vanityeth"
version = "0.1.3"
authors = ["Renning Bruns <ren@renmail.net>"]
edition = "2018"
description = "Allows searching for vanity ethereum addresses and mnemonic to generate it"
documentation = "https://github.com/nullren/vanityeth"
homepage = "https://github.com/nullren/vanityeth"
repository = "https://github.com/nullren/vanityeth"
keywords = ["ethereum", "search"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
ethers = "0.4.0"
rand = "0.8.4"
structopt = "0.3.22"
ctrlc = "3.2.0"
num_cpus = "1.13.0"
